# auto-tg-listener

./: .0pdd.yml  .aiignore  .env.sample  .gitignore  .lycheeignore  .markdownlint.yml  .pdd  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  Makefile  README.md  REUSE.toml  main.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: actionlint.yml  greetings.yml  links.yml  lint-make.yml  lint-makefile.yml  lint-markdown.yml  lint-python.yml  makelint.yml  markdownlint.yml  pdd.yml  pre-commit.yml  pytest.yml  pythonlint.yml  reuse.yml
.junie/: guidelines.md
LICENSES/: MIT.txt
app/: __init__.py  main.py  patterns.py  project.py  telegram.py
template/: .env.sample  .env.template  service.plist.template
tests/: __init__.py  test_main.py
