[project]
name = "tg-listener"
version = "0.1.0"
description = "Automated Telegram message listener with regex filtering and macOS Shortcuts integration"
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "telethon>=1.41.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "pylint>=4.0.3",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
